--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('mysql:mysql-connector-java')
+
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.security:spring-security-core:5.0.6.RELEASE')
     compile('org.springframework.boot:spring-boot-devtools')
