--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,17 @@ handlebars.cache=false
 handlebars.expose-session-attributes=true
 
 spring.devtools.livereload.enabled=true
-spring.datasource.url=jdbc:h2:~/baeminchan;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.datasource.url=jdbc:mysql://localhost:3306/bcart
+spring.datasource.username=root
+spring.datasource.password=junsulime
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.servlet.session.tracking-modes=cookie
 spring.h2.console.enabled=true
