--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 }
 
 dependencies {
+    compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
+    compile('org.projectlombok:lombok:1.18.0')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.security:spring-security-core:5.0.6.RELEASE')
