--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.servlet.session.tracking-modes=cookie
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
